<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_dark_background">

    <TextView
        android:id="@+id/top_left_textview"
        android:layout_width="@dimen/textview_width"
        android:layout_height="@dimen/textview_width"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:gravity="center
"       android:text="@string/top_left_textview_text"
        android:textSize="@dimen/text_size"
        android:background="@color/light_blue"/>
    <TextView
        android:id="@+id/top_right_textview"
        android:layout_width="@dimen/textview_width"
        android:layout_height="@dimen/textview_width"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="center
"       android:text="@string/top_right_textview_text"
        android:textSize="@dimen/text_size"
        android:background="@color/light_purple_blue"/>
    <TextView
        android:id="@+id/bottom_right_textview"
        android:layout_width="@dimen/textview_width"
        android:layout_height="@dimen/textview_width"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="center
"       android:text="@string/bottom_right_textview_text"
        android:textSize="@dimen/text_size"
        android:background="@color/light_mint"/>
    <TextView
        android:id="@+id/bottom_left_textview"
        android:layout_width="@dimen/textview_width"
        android:layout_height="@dimen/textview_width"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:gravity="center
"       android:text="@string/bottom_left_textview_text"
        android:textSize="@dimen/text_size"
        android:background="@color/light_violet"/>
</androidx.constraintlayout.widget.ConstraintLayout>