<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/center_textview"
        android:layout_width="@dimen/textview_width"
        android:layout_height="@dimen/textview_width"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/light_blue"
        android:text="@string/center_textview_text"
        android:textSize="@dimen/text_size"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".25"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".35"/>

    <TextView
        android:id="@+id/left_textview"
        android:layout_width="@dimen/small_textview_width"
        android:layout_height="@dimen/small_textview_width"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="@id/horizontal_guideline"
        app:layout_constraintLeft_toLeftOf="@id/vertical_guideline"
        android:background="@color/light_mint"
        android:text="@string/left_textview_text"
        android:textSize="@dimen/text_size"/>

    <TextView
        android:id="@+id/right_textview"
        android:layout_width="@dimen/small_textview_width"
        android:layout_height="@dimen/small_textview_width"
        android:gravity="center"
        app:layout_constraintLeft_toRightOf="@id/left_textview"
        app:layout_constraintTop_toBottomOf="@id/left_textview"
        android:background="@color/light_purple_blue"
        android:text="@string/right_textview_text"
        android:textSize="@dimen/text_size"/>

</androidx.constraintlayout.widget.ConstraintLayout>